# r_kernel

./: Cargo.toml  README.md  build.sh  build_kernel.sh  clean.sh  link.ld  run_kernel.sh
.cargo/: config.toml
bootloader/: bootloader.asm  gdt_32bit.asm
src/: lib.rs  main.rs  vga_printer.rs
src/components/: info.rs  interrupts.rs  mod.rs  vga_printer.rs
