[package]
name = "r_kernel"
version = "0.1.0"
authors = ["PR"]
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
volatile = "0.2.6"
x86_64 = "0.15.2"
bootloader = "0.9"
spin = "0.10.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
